# dork

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_and_run.sh  main.cpp  reply_handler.puml  room.txt  room_demo.txt  room_start.txt
.github/workflows/: cmake.yml
demo_room/: dr1.txt  dr2.txt
src/: CMakeLists.txt  file_paths.h  files.cpp  files.h  game_state.cpp  game_state.h  main.cpp  objects.cpp  objects.h  replies.h  room.cpp  room.h  tokens.cpp  tokens.h
src/objects/: CMakeLists.txt  util.h
src/objects/button/: CMakeLists.txt  button.cpp
src/objects/container/: CMakeLists.txt  container.cpp
src/objects/door/: CMakeLists.txt  door.cpp
src/objects/light/: CMakeLists.txt  light.cpp
src/objects/start_button/: CMakeLists.txt  start_button.cpp
worlds/door_world/: dr1.txt  dr2.txt  start.txt
